fixed overlapping typing notification

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,19 +1,17 @@
 body {
   margin: 0;
-  padding-bottom: 3rem;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   background: rgb(22, 22, 22);
   color: white;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
 }
 
 #input-container{
   background: rgba(0, 0, 0, 0.15);
   padding: 0.25rem;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
   display: flex;
   flex-direction: column;
   gap: .25rem;
@@ -56,6 +54,8 @@ body {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  overflow: auto;
+  scroll-behavior: smooth;
 }
 
 #messages>li {
